Registrando um usuário com controller, model e routes
