# backend/routes/usuario.routes.js
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import UsuarioController from "../controllers/usuario.controller.js";
+
+const usuarioRoutes = Router();
+
+usuarioRoutes.post("/", UsuarioController.registrarUsuario);
+
+export default usuarioRoutes;
